# spec2code

./: .gitignore  .jscpd.json  CLAUDE.md  Makefile  export_cards.py  main.py  pyproject.toml  spec2code_cli.py  test_schema_datatype_issue.py
.devcontainer/: devcontainer.json
apps/algo-trade-pipeline/checks/: backtest_checks.py  feature_checks.py  market_data_checks.py  model_checks.py
apps/algo-trade-pipeline/datatypes/: enums.py  models.py  schemas.py  type_aliases.py
apps/algo-trade-pipeline/generators/: backtest.py  feature_engineering.py  market_data.py  model.py
apps/algo-trade-pipeline/transforms/: backtest.py  features.py  market_data.py  model.py
apps/cli-test-project/datatypes/: schemas.py  type_aliases.py
apps/dataframe-abcd/checks/: dataframe_checks.py
apps/dataframe-abcd/transforms/: transform_a_to_b.py  transform_bc_to_d.py
apps/dataframe-pipeline-extended/checks/: dataframe_checks.py
apps/dataframe-pipeline-extended/transforms/: features.py  normalization.py  output.py
apps/dataframe-pipeline/checks/: dataframe_checks.py
apps/dataframe-pipeline/transforms/: pipeline.py
apps/minimal-test/datatypes/: models.py  schemas.py  type_aliases.py
apps/sample-pipeline/checks/: text_checks.py
apps/sample-pipeline/generators/: text_generators.py
apps/sample-pipeline/transforms/: text_ops.py
apps/test-project/: __init__.py
apps/test-project/datatypes/: __init__.py  models.py
apps/type-extension-demo/datatypes/: models.py  type_aliases.py
apps/type-extension-demo/transforms/: features.py
apps/type_extension_demo/checks/: validation.py
apps/type_extension_demo/datatypes/: enums.py  type_aliases.py
configs/: algo-trade-pipeline-default-config.yaml  dataframe-abcd-default-config.yaml  dataframe-pipeline-default-config.yaml  dataframe-pipeline-extended-default-config.yaml  pipeline-config-error-test.yaml  pipeline-config-invalid-examples.yaml  pipeline-config-invalid-negative.yaml  pipeline-config-invalid-param-type.yaml  pipeline-config-minmax.yaml  pipeline-config-robust-all.yaml  pipeline-config-zscore-multi.yaml  sample-pipeline-default-config.yaml
doc/: CARD_EXPORTER_DESIGN.md  FRONTEND_MIGRATION_GUIDE.md  IMPLEMENTATION_STRATEGY.md  MIGRATION_PLAN.md  MULTIINDEX_TEST_FINDINGS.md  RELEASE_NOTES.md  SPEC2CODE_CONSTRAINTS.md  TYPE_EXTENSION_DESIGN.md  generator_spec_.md  new_packages.md  proto_design.md
doc/examples/: README.md
frontend/: .jscpd.json  knip.json  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: card-library.tsx  dag-editor.tsx  execution-dashboard.tsx
spec2code-front/: package-lock.json  package.json
spec2code-front/app/: globals.css
spec2code-front/components/: card-library.tsx  dag-editor.tsx  execution-dashboard.tsx
specs/: README.md  algo-trade-pipeline.yaml  dataframe-abcd.yaml  dataframe-pipeline-extended.yaml  dataframe-pipeline.yaml  spec.yaml  test_metadata.yaml  type-extension-demo.yaml
spectool/: __init__.py  __main__.py  cli.py
spectool/backends/: __init__.py  py_code.py  py_skeleton.py  py_validators.py
spectool/tests/: __init__.py  test_backend_py_code.py  test_backend_py_validators.py  test_card_coverage.py  test_card_exporter.py  test_cli_e2e.py  test_config_runner.py  test_config_workflow.py  test_dag_execution.py  test_dag_stage_candidates.py  test_docstring_metadata.py  test_e2e_gen_validate.py  test_example_validation.py  test_full_form_impl_path.py  test_generated_code_quality.py  test_helpers.py  test_integration.py  test_integrity_full.py  test_ir_dataclasses.py  test_loader.py  test_main_integration.py  test_meta_name_validation.py  test_meta_types.py  test_normalizer.py  test_schema_spec_integration.py  test_skeleton_generation.py  test_skeleton_imports_and_types.py  test_spec_any_usage.py  test_transform_parameter_validation.py  test_type_alias_generation.py  test_validation_comprehensive.py  test_validation_edge_cases.py  test_validator.py
tools/: static_callgraph.py
(+58 files in other folders)
