[project]
name = "spec2code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.25.1",
    "networkx>=3.5",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pandas>=2.3.3",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
# Exclude problematic directories
norecursedirs = ["TransformFn", ".venv", ".git", "__pycache__", "apps", "output"]
