[project]
name = "spec2code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "fire>=0.7.1",
    "jsonschema>=4.25.1",
    "networkx>=3.5",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "ruff>=0.9.0",
    "types-jsonschema>=4.25.1.20251009",
    "types-networkx>=3.5.0.20251001",
    "types-pyyaml>=6.0.12.20250915",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.pytest.ini_options]
testpaths = ["packages/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
# Exclude problematic directories
norecursedirs = ["TransformFn", ".venv", ".git", "__pycache__", "apps", "output"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "ANN", "B", "S", "C90", "PLR", "RET", "SIM"]
ignore = ["S101", "B008", "ANN204", "B017", "ANN201"]
preview = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50
max-returns = 6
max-nested-blocks = 4
max-locals = 15

[tool.pylint.main]
disable = "all"
enable = "too-many-lines"

[tool.pylint.format]
max-module-lines = 500
